PROYECTO01 --> ORIGIN MASTER  WAR (06/06/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual_en.properties
@@ -79,7 +79,7 @@ ubicacionGeografica=Geographic Location
 modJornadaLaboral=Labor Working Day
 jornadaLaboral=Working Day Name
 modFormaPago=Payment Method
-formaPago=Payment Method Name
+formaPago=Payment Form Name
 cuentaPago=Payment Account
 tipoCuenta=Account Type
 ahorros=SAVINGS
@@ -118,7 +118,7 @@ ciudadNacimientoM=Cities
 buscarCNIP=Search City: 
 nombre=Name
 advertenciaFechaIngreso=The date of entry is not found among the active period of the user. Please check the parameters of the user or the settlement date of admission before continuing.
-errorFechas=The entry date is less than 01/01/1900
+errorFechas=The date entered is less than 01/01/1900
 editarEmpresaInformacionPersonal=Employe Company
 editarPrimerApellidoInformacionPersonal=Employee First Name
 editarSegundoApellidoInformacionPersonal=Employee Last Name
@@ -163,3 +163,94 @@ tipoTrabajadorM=Workers Types
 buscarTTTT=Search Worker Type: 
 nombreTipoTrabajador=Worker Name
 editarTrabajadorTipoTrabajador=Worker Type Name
+reformaLaboralM=Labors Reforms
+buscarRLTS=Search Reform: 
+nombreReformaLaboral=Reform Name
+editarReformaTipoSalario=Salary Type Reform Name
+motivoCambioSueldoM=Salaries Motives
+buscarMCSS=Search Motive: 
+tipoSueldoM=Salaries Types
+buscarTSS=Search Salary Type: 
+tipoSueldo=Salary Description
+unidadM=Units
+buscarUS=Search Unit: 
+nombreUnidad=Payment Unit Name
+editarValorSueldo=Salary Value
+editarMotivoSueldo=Salary Motive
+editarTipoSueldoSueldo=Salary Type Description
+editarUnidadSueldo=Salary Payment Unit
+errorValorSueldo=The salary values is less than zero
+errorFormatoValorSueldo=The salary value is incorrect
+motivoContratoM=Contracts Motives
+buscarMCTC=Search Motive: 
+tipoContratoM=Contracts Types
+buscarTCTC=Search Contract Type: 
+editarMotivoTipoContrato=Contract Motive Na<m
+editarTipoTipoContrato=Contract Type Name
+editarFechaTipoContrato=Contrac End Date
+normaLaboralM=Labors Norms
+buscarNLNL=Search Norm: 
+editarNormaNormaLaboral=Labor Norm Name
+contratoM=Contracts
+buscarCLL=Search Contract: 
+descripcionContrato=Contract Description
+editarContratoLegislacionLaboral=Labor Law Name
+ubicacionGeograficaM=Geographics Locations
+buscarUGUGL=Search Geographic Location: 
+telefono=Phone
+fax=Fax
+zona=Zone
+editarUbicacionUbicacionGeografica=Geographic Location Description
+metodoPagoM=Payments Methods
+buscarMPFP=Search Method: 
+sucursalM=Branchs Offices
+periodicidadM=Periodicities
+buscarPFP=Search Periodicity: 
+buscarSFP=Search Payment Branch Office: 
+editarPeriodicidadFormaPago=Payment Form Name
+editarCuentaFormaPago=Payment Account
+editarSucursalFormaPago=Payment Branch Office Name
+editarMetodoFormaPago=Payment Method Description
+jornadaLaboralM=Labors Workings Days
+buscarJLJL=Search Working Day: 
+editarJornadaJornadaLaboral=Labors Workings Days Description
+terceroM=Suppliers Branchs
+buscarTA=Search Supplier: 
+editarEPSAfiliacion=Suppliers Branchs PHI
+editarARPAfiliacion=Suppliers Branchs PHM
+editarAFPAfiliacion=Suppliers Branchs PFI
+editarFondoAfiliacion=Suppliers Branchs Fund
+editarCajaAfiliacion=Suppliers Branchs Office
+tercero=Supplier
+advertenciaEPS=\u00bf Are you absolutely sure that the selected supplier is considered an PHI entity?
+advertenciaAFP=\u00bf Are you absolutely sure that the selected supplier is considered an PFI entity?
+advertenciaARP=\u00bf Are you absolutely sure that the selected supplier is considered an PHM entity?
+estadoCivilM=Marital Status
+buscarECEC=Buscar Marital Status: 
+editarEstadoEstadoCivil=Marital Status Description
+ciudadDireccionM=Cities
+buscarCD=Search City: 
+editarDireccionDireccion=Address
+editarCiudadDireccion=City Name
+ciudadTelefonoM=Cities
+buscarCT=Search City: 
+tipoTTelefonoM=Phones Types
+buscarTTT=Search Phone Type: 
+editarTipoTelefonoTelefono=Phone Type Name
+editarCiudadTelefono=City Name
+editarNumeroTelTelefono=Phone Number
+errorNumeroTelefonico=The phone number entered is incorrect
+errorTopeEmpleadosEmpresa=\u00a1\u00a1\u00a1 The limit of employees allowed has been exceeded !!!. Please contact your distributor.
+errorEmpleadoRegistrado=
+errorPersonaRepetida=
+errorCodigoTerceroPersona=
+errorIngresoTotalRegistro=
+errorEmpleadoDuplicado=
+aletarTiposTrabajadoresTS=
+aletarTiposTrabajadoresRL=
+aletarTiposTrabajadoresTC=
+errorFechaContratoFechaIngreso=
+aletarTiposTrabajadoresC=
+aletarTiposTrabajadoresNL=
+errorCamposObligatorios=
+procesoGuardadoOK=
