--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/claseausentismo_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/claseausentismo_en.properties
@@ -49,12 +49,12 @@ errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associa
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=Table 'CLASESAUSENTISMOS' not in ObjetosDB. Please contact support.
 editarCodigo=Edit Code
-editarDescripcion=Edit Description
+editarDescripcion=Description
 nuevoD=New Entry
-editarTipo=Edit Type
+editarTipo=Type Absenteeism
 nuevoDD=Add New Class Absenteeism
 codigoD=*Code:
-nombreD=*Name:
+nombreD=*Description:
 tipoD=*Type:
 #Add
 agregar=Agregar
@@ -65,3 +65,5 @@ duplicarDD=Duplicate Class Absenteeism
 codigoE=Code
 descripcionE=Description
 tipoE=Type
+#Exit
+salir=Exit
