--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica_en.properties
@@ -54,3 +54,14 @@ validacionNuevo= To insert a new location it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+#RASTRO
+confirmarRastro=The table 'VIGENCIASUBICACIONES' has traces for the selected entry, do you wish to continue?
+confirmarRastroHistorico=The table 'VIGENCIASUBICACIONES' has historic traces,do you wish to continue?
+errorRastroHistorico=The table has no historic traces.
+errorRegistroRastro=The selected entry has no traces.
+errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associated entries, do you wish to continue?
+errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
+seleccionarRegistro=Please choose an entry.
+errorObjetosDB=The table 'VIGENCIASCARGOS' hasn't been found ObjetosDB. Please get in touch with support
+salir=Exit
+fechaDuplicada=The date is already registered, please enter another date.
