PROYECTO01 --> ORIGIN MASTER - WAR (10/06/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual_en.properties
@@ -255,3 +255,4 @@ aletarTiposTrabajadoresNL=The combination between Worker Type and Labor Norm isn
 errorCamposObligatorios=The fields marked with a (*) are obligatory. Please check that those fields aren't empty.
 procesoGuardadoOK=The new employee data were saved successfully
 errorCamposAlternativos=There's an inconsistency on the employees optional data. Please verify the information
+ingresarPersonal=Entry New Employee
