--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato_en.properties
@@ -97,3 +97,4 @@ errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associa
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'VIGENCIASTIPOSCONTRATOS' hasn't been found ObjetosDB. Please get in touch with support
 fispH=Date Sus.
+fechaDuplicada=The date is already registered, please enter another date.
