PROYECTO01 --> ORIGIN MASTER - WAR (11/06/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual_en.properties
@@ -247,10 +247,10 @@ errorCodigoTerceroPersona=You're entering a Supplier's code (Employee Nit) that 
 errorIngresoTotalRegistro=\u00a1\u00a1The entry can't be added on Designer.RHN!! Please exit this screen
 errorEmpleadoDuplicado=!The employee already exists!
 aletarTiposTrabajadoresTS=The combination between Worker Type and Compensation Type isn't valid, please verify this information.
-aletarTiposTrabajadoresRL=The combination between Worker Type and Contract Type isn't valid, please verify this information.
+aletarTiposTrabajadoresRL=The combination between Worker Type and Salary Type isn't valid, please verify this information.
 aletarTiposTrabajadoresTC=The combination between Worker Type and Compensation Type isn't valid, please verify this information.
 errorFechaContratoFechaIngreso=The termination date of the contract can be neither equal nor less than the start date.
-aletarTiposTrabajadoresC=The combination between Worker Type andLabor Law isn't valid, please verify this information.
+aletarTiposTrabajadoresC=The combination between Worker Type and Labor Law isn't valid, please verify this information.
 aletarTiposTrabajadoresNL=The combination between Worker Type and Labor Norm isn't valid, please verify this information.
 errorCamposObligatorios=The fields marked with a (*) are obligatory. Please check that those fields aren't empty.
 procesoGuardadoOK=The new employee data were saved successfully
@@ -268,3 +268,4 @@ infoEstructuraCentroCosto=To enter the Structure field is necessary to register 
 infoEstructuraCargoDesempe\u00f1ado=To enter the Structure field is necessary to register the company and the entry date first.
 informacion=Information
 operacionProceso=Operation in process. Please wait...
+nit=NIT
