--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica_en.properties
@@ -65,3 +65,4 @@ seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'VIGENCIASCARGOS' hasn't been found ObjetosDB. Please get in touch with support
 salir=Exit
 fechaDuplicada=The date is already registered, please enter another date.
+fechaVacia=The date can not be empty.
