PROYECTO01 --> ORIGIN MASTER - WAR (13/06/2014)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual_en.properties
@@ -269,3 +269,4 @@ infoEstructuraCargoDesempe\u00f1ado=To enter the Structure field is necessary to
 informacion=Information
 operacionProceso=Operation in process. Please wait...
 nit=NIT
+errorEmailPersona=The email is incorrect.
