--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/empllegislacionlaboral_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/empllegislacionlaboral_en.properties
@@ -72,3 +72,6 @@ finalX=End Date
 finalXX=End_Date
 legislacionXX=Labour_Law
 tipocontratoXX=Type_of_Contract
+legislacionlaboral=Labour Law
+errorFechas=The initial date is less than 01/01/1900
+errorRegNew=The fields Initial Date - Labour Law are obligatory
