PROYECTO01--> WAR ORIGIN MASTER 13-06-2014

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaformapago_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaformapago_en.properties
@@ -33,7 +33,7 @@ errorRegistroRastro=The selected entry has no traces.
 errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associated entries, do you wish to continue?
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
-errorObjetosDB=The table 'VIGENCIASCONTRATOS' hasn't been found ObjetosDB. Please get in touch with support
+errorObjetosDB=The table 'VIGENCIASFORMASPAGOS' hasn't been found ObjetosDB. Please get in touch with support
 #NuevoRegistro
 nuevoregistro=New Entry
 ingresarnuevo=Add a new employee information
@@ -87,3 +87,4 @@ sucursalX=Branch_Office
 fechaCuentaX=Account Date
 cuentaX=Account
 fechaX=Date
+salir=Exit
