--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina_en.properties
@@ -166,3 +166,4 @@ generandoReporte=Generating report, this may take a few minutes...
 mensajeExitoReporte=Report generated successfully.
 descargar=Download
 errorReporte=Error generating report.
+envioLote=Submit data batch to send document management
