--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades_en.properties
@@ -58,8 +58,9 @@ codigoAlternativo=Alternative_Code
 noombre=Name
 departamentos=States
 codigoN=Code: 
-nombreN=City Name: 
-departamentooN=State: 
+nombreN=*City Name: 
+departamentooN=*State: 
 codigoalternativoN=Alternative Code: 
 #Validacion
 nombreVacio=The field City Name can't be empty.
+salir=Exit
