PROYECTO01--> ORIGIN MASTER WAR 18-06-2014

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/conceptojuridico_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/conceptojuridico_en.properties
@@ -64,3 +64,17 @@ errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associa
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table hasn't been found ObjetosDB. Please get in touch with support
+#Toolbar
+guardar=Save
+editar=Edit
+lista=List of Values
+filtrar=Activate Filter
+xls=Export to XLS
+xml=Export to XML
+pdf=Export to PDF
+nuevo=New Entry
+eliminar=Erase Entry
+duplicar=Duplicate Entry
+rastro=Trace
+salir=Exit
+xit
