--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructuraplanta_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructuraplanta_en.properties
@@ -90,3 +90,4 @@ estructuraPadreX=Parent Structure
 estructuraPadreXX=Parent_Structure
 ePadre=Parent Structure
 errorCodigo=The entered code is already used on another entry.
+salir=Exit
