--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportelaboral_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportelaboral_en.properties
@@ -108,3 +108,6 @@ infoReporteNombreD=Report Name
 errorRegNew=The fields Date Since - Date Until- Employee Since - Employee Until are obligatory.
 errorFechas=The date until is less than date since.
 salir=Exit
+mostrarTodos=View all reports
+buscarReporte=Search report
+generarReporte=Generate report
