--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina_en.properties
@@ -167,3 +167,7 @@ mensajeExitoReporte=Report generated successfully.
 descargar=Download
 errorReporte=Error generating report.
 envioLote=Submit data batch to send document management
+mostrarTodos=View all reports
+buscarReporte=Search report
+generarReporte=Generate report
+salir=Exit
