--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal_en.properties
@@ -174,3 +174,7 @@ infoReporteCodigoD=Report Code
 infoReporteNombreD=Report Name
 errorRegNew=The fields Date Since - Date Until- Employee Since - Employee Until are obligatory.
 errorFechas=The date until is less than date since.
+mostrarTodos=View all reports
+buscarReporte=Search report
+generarReporte=Generate report
+salir=Exit
