--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportescontabilidad_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportescontabilidad_en.properties
@@ -89,3 +89,4 @@ infoReporteCodigoD=Report Code
 infoReporteNombreD=Report Name
 errorRegNew=The fields Date Since - Date Until- Employee Since - Employee Until are obligatory.
 errorFechas=The date until is less than date since.
+salir=Exit
