--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipocontrato_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tipocontrato_en.properties
@@ -110,3 +110,4 @@ headerHL=Office Hours
 errorCodigoClonado=The new code exists
 duplicarregistroDL=Duplicate Special Working Days Entry
 duplicarregistroTC=Duplicate Contracts Types Entry
+salir=Exit
