--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tiposueldo_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tiposueldo_en.properties
@@ -127,3 +127,4 @@ teFormula=Entities Types Distrib.
 codigoTE=Code
 nombreTE=Name
 errorNuevoRegistroTEFormula=An Entity Type has already been registered with the chousen Company.
+salir=Exit
