--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/idiomapersona_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/idiomapersona_en.properties
@@ -68,3 +68,5 @@ validacionNuevo= To insert a new language it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+salir=Exit
+errorRegNull=The field Language is obligatory.
