--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto_en.properties
@@ -143,3 +143,5 @@ estadoX=State
 enviaraX=Send_Treasury
 codigoalternativoX=Alternative_Code
 detalle=Selected concept details
+salir=Exit
+textI=Independent for shipment to treasury
