--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/formula_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/formula_en.properties
@@ -25,7 +25,7 @@ p=R
 buscar=Search Formula
 mostrar=Show All
 #Clonar Formula
-ncnlyo=New Formula's Short Name, long name and Observation: 
+ncnlyo=New Formula's Short Name, long name and Observation
 fac=Formula to Clone: (Use List of Values)
 clonarboton=[Clone]
 #Propiedades
@@ -95,3 +95,5 @@ validacionNuevo= To insert a new formula it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+textP=Indicates whether the periodicity is independent 
+salir=Exit
