--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/legislacion_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/legislacion_en.properties
@@ -81,3 +81,4 @@ cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
 detalle=Detail of the formula associated to the selected law
+salir=Exit
