--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/proyecto_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/proyecto_en.properties
@@ -122,4 +122,6 @@ errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associa
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table hasn't been found ObjetosDB. Please get in touch with support
 #Dialogo
-errorFechas=Dates Error
+errorFechas=The initial date is less than 01/01/1900 and/or the end date is less than initial date.
+salir=Exit
+errorDatosNull=The fields Code - Project Name are obligatory.
