--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/gruposalarial_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/gruposalarial_en.properties
@@ -72,3 +72,6 @@ validacionNuevo= To insert a new wage group it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+salir=Exit
+errorRegNew=The fields Date - Salary Value are obligatory.
+errorRegDescripcion=The field description is obligatory.
