--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades_en.properties
@@ -31,7 +31,7 @@ cancelar=Cancel
 atencion=WARNING...!
 aceptar=Accept
 atras=Back
-validacionNuevo= To insert a new city it's necessary to add:
+validacionNuevo= To insert a new novelty it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 refrescar= Refresh
 #NuevoRegistro
