--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atextrarecargo_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atextrarecargo_en.properties
@@ -171,3 +171,13 @@ errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associa
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table hasn't been found ObjetosDB. Please get in touch with support
+textA=Automatic Approval
+textT=Turn
+textG=Additional Guarantees
+textAdicional=Additional Start / End of the Working Day
+textC=Pay the extra time for this record
+textM=Minimum number of minutes to pay
+textA2=Adds turn
+textHI=Initial Hour
+textHF=End Hour
+salir=Exit
