--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/auxtipoauxilio_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/auxtipoauxilio_en.properties
@@ -58,3 +58,4 @@ validacionNuevo= To insert a new absenteeism it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+salir=Exit
