--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/barra_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/barra_en.properties
@@ -20,10 +20,18 @@ cancelar=Cancel
 detalles=[Settlement details]
 errores=[Errors]
 #Toolbar
+guardar=Save
+editar=Edit
+lista=List of Values
 filtrar=Activate Filter
 xls=Export to XLS
 xml=Export to XML
 pdf=Export to PDF
+nuevo=New Entry
+eliminar=Erase Entry
+duplicar=Duplicate Entry
+rastro=Trace
+salir=Exit
 #Derecha
 consultar=Consult data
 liquidacionescerradas=Closed Settlements
