--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cerrarliquidacion_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cerrarliquidacion_en.properties
@@ -35,3 +35,19 @@ validacionNuevo= To insert a new absenteeism it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+#Toolbar
+guardar=Save
+editar=Edit
+lista=List of Values
+filtrar=Activate Filter
+xls=Export to XLS
+xml=Export to XML
+pdf=Export to PDF
+nuevo=New Entry
+eliminar=Erase Entry
+duplicar=Duplicate Entry
+rastro=Trace
+salir=Exit
+nombreEmpleadoXX=Employee_Name
+nombreEmpleadoX=Employee Name
+codigoX=Code
