--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleempresa_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleempresa_en.properties
@@ -262,3 +262,4 @@ reportaLNSXX=LNS AFP Report
 reportaLNSX=LNS_AFP_Report
 exoneraLNSXX=LNS AFP Exonerates
 exoneraLNSX=LNS AFP Exonerates
+salir=Exit
