--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/empresa_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/empresa_en.properties
@@ -134,4 +134,5 @@ editarOrigenClonadoD=Target Company Name
 editarDestinoClonadoD=Original Company Name
 detalle=[Company Detail]
 empresaBanco=[Company - Bank]
-direccion=Company Address
+direccion=[Reports Signatures]
+salir=Exit
