--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/escalafonsalarial_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/escalafonsalarial_en.properties
@@ -76,3 +76,4 @@ tipoTrabajadorX=Worker Type
 salarioX=Salary
 duplicarregistroES=Duplicate Salaries Scales Entry
 nuevoregistroGS=New Wage Groups Entry
+salir=
