--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructura_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructura_en.properties
@@ -10,9 +10,9 @@ filtrar=Activate Filter
 xls=Export to XLS
 xml=Export to XML
 pdf=Export to PDF
-nuevo=New Organisation Chart
-eliminar=Erase Organisation Chart
-duplicar=Duplicate Organisation Chart
+nuevo=New Entry
+eliminar=Erase Entry
+duplicar=Duplicate Entry
 rastro=Trace
 #Tabla
 fecha=Date
@@ -31,7 +31,7 @@ nitEM=N.I.T
 nombreEM=Name
 #Nuevo Registro
 nuevoregistro=New Entry
-ingresarnuevo=Create Organisation Chart
+ingresarnuevo=Add Organisation Chart Information
 fechaN=Date: 
 codigoN=Code: 
 empresaN=Company: 
@@ -70,3 +70,13 @@ validacionNuevo= To insert a new oganisational chart it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
+#RASTRO
+confirmarRastro=The table 'ORGANIGRAMAS' has traces for the selected entry, do you wish to continue?
+confirmarRastroHistorico=The table 'ORGANIGRAMAS' has historic traces,do you wish to continue?
+errorRastroHistorico=The table has no historic traces.
+errorRegistroRastro=The selected entry has no traces.
+errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associated entries, do you wish to continue?
+errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
+seleccionarRegistro=Please choose an entry.
+errorObjetosDB=The table 'ORGANIGRAMAS' hasn't been found ObjetosDB. Please get in touch with support
+salir=Exit
