--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ibcautoliquid_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ibcautoliquid_en.properties
@@ -77,3 +77,4 @@ errorRegNew=The fields Initial Date-Value are obligatory.
 errorFechas=The initial date is null and/or the end date is less than initial date.
 codigo=Code
 nombre=Name
+salir=Exit
