--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadplano_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadplano_en.properties
@@ -124,3 +124,43 @@ cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
 errores=ERRORS: 
 reversarcarguenovedades=Reverse Novelties Loading
+#Toolbar
+guardar=Save
+editar=Edit
+lista=List of Values
+filtrar=Activate Filter
+xls=Export to XLS
+xml=Export to XML
+pdf=Export to PDF
+nuevo=New Entry
+eliminar=Erase Entry
+duplicar=Duplicate Entry
+rastro=Trace
+conceptoX=Concept
+empleadoX=Employee
+fechaIniciallX=Initial_Date
+fechaFinalX=End_Date
+fechaReporteX=Report_Date
+documentoSoporteXX=Support_Document
+documentoSoporteX=Support Document
+valortotalXX=Total_Value
+valortotalX=Total Value
+periodicidadX=Perodicity
+terceroX=Supplier
+saldoX=Balance
+unidadesEnteraXX=Whole_Units 
+unidadesEnteraX=Whole Units 
+unidadesFraccionXX=Fractional_Units
+unidadesFraccionX=Fractional Units
+editarConcepto=Concept
+editarEmpleado=Employee
+editarFechainicial=Initial Date
+editarFechaFinal=End Date
+editarFechaReporte=Report Date
+editarDocumentoS=Support Document
+editarValor=Value
+editarPeriodicidad=Perodicity
+editarTercero=Supplier
+editarSaldo=Balance
+editarUEntera=Whole Unit
+editarUFraccion=Fractional Unit
