--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametro_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametro_en.properties
@@ -6,6 +6,7 @@ quitartodos=Remove All
 cambiosmasivos=Massive Changes
 verificarempleados=Verify Employees
 adicionarempleado=Add Employee
+refrescar= Refresh
 #Toolbar
 guardar=Save
 editar=Edit
@@ -14,6 +15,11 @@ filtrar=Activate Filter
 xls=Export to XLS
 xml=Export to XML
 pdf=Export to PDF
+nuevo=New Entry
+eliminar=Erase Entry
+duplicar=Duplicate Entry
+rastro=Trace
+salir=Exit
 #Arriba
 fechadesde=Since Date: 
 fechahasta=Until Date: 
