--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/perexperiencialaboral_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/perexperiencialaboral_en.properties
@@ -59,7 +59,7 @@ buscarM=Search Motive:
 nombre=Name
 errorBorradoReg=It's necessary that the field Progress Achieved be empty.
 errorIngresoReg=The fields entry date - economic sector are obligatory.
-errorFechasIngresoReg=The retirement date is less than entry date.
+errorFechasIngresoReg=The retirement date is less than entry date and/or the entry date is null
 logroAlcanzadoN=Progress Achieved: 
 motivoRetiroN=Retirement Motive: 
 sectorEconomicoN=Economic Sector: 
