--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/solucionformula_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/solucionformula_en.properties
@@ -62,3 +62,4 @@ fPagoE=Process - Accumalite Involved
 formulaE=Formula - Accumalite Involved
 procesoE=Process - Accumalite Involved
 errorOpcion=The option are not hability
+salir=Exit
