--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportescontabilidad_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportescontabilidad_en.properties
@@ -90,3 +90,4 @@ infoReporteNombreD=Report Name
 errorRegNew=The fields Date Since - Date Until- Employee Since - Employee Until are obligatory.
 errorFechas=The date until is less than date since.
 salir=Exit
+generarReporte=Generate Report
