--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/reportesbancos_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/reportesbancos_en.properties
@@ -111,3 +111,4 @@ infoReporteNombreD=Report Name
 errorRegNew=The fields Date Since - Date Until- Employee Since - Employee Until  are obligatory.
 errorFechas=The date until is less than date since.
 salir=Exit
+GENERARREPORTE=Generate Report
