--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/comprobante_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/comprobante_en.properties
@@ -9,11 +9,18 @@ periodo=Liquidation Period:
 estructura=Liquidated structure:
 buscar=Search Employee
 mostrar=Show All
-#ToolBar
+#Toolbar
+guardar=Save
+editar=Edit
+lista=List of Values
 filtrar=Activate Filter
 xls=Export to XLS
 xml=Export to XML
 pdf=Export to PDF
+nuevo=New Entry
+eliminar=Erase Entry
+duplicar=Duplicate Entry
+rastro=Trace
 #Tabla de Abajo
 empleador=Employer
 descripcion=Description
@@ -63,3 +70,5 @@ terceroE=Suppliers_Name
 fechapago=Payment_Date
 #Sin registros
 sinregistros=No entries
+salir=Exit
+estructuraFormula=Formula Structure
