--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cuenta_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cuenta_en.properties
@@ -141,3 +141,10 @@ manejasubcuentaX=Handles_Sub_Account
 ccX=C.C.
 iccX=I.C.C.
 salir=Exit
+textN=The account handles NIT
+textC=The account handles employee C.C.
+textP=The account handles proration
+textCC=In the process of the interface manages the accumulated cost center
+textICC=The cost center is part of the ledger account
+textE=Consolidates company NIT
+textI=Include ShorName
