--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tercero_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tercero_en.properties
@@ -176,3 +176,6 @@ errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associa
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table hasn't been found ObjetosDB. Please get in touch with support
+errorDatosNullTerceros=The fields NIT - Name are obligatory.
+errorDatosNullSucursal=The field Branch Code is obligatory.
+salir=Exit
