--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplcomprobante_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplcomprobante_en.properties
@@ -144,3 +144,4 @@ centroCostoCreditoM=Cost Center
 buscarCCC=Search Cost Center: 
 textTT=Indicate whether the receipt was delivered and / or paid to the employee physically
 entregadoC=\u00bfDelivered to employee?:
+errorFechaEntregaNull=The delivered date can not be empty if the field Delivered to Employee is selected
