--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq_en.properties
@@ -88,7 +88,7 @@ procesoLiq=[Liquidation Process]
 generacionArch=[Generation Archives]
 btn1=
 btn2=
-btn3=
+btn3=Paid medical disabilities
 btn4=
 btn5=
 btn6=
@@ -115,16 +115,16 @@ textRET=Retirement
 textTDA=
 textTAA=
 textVSP=
-textVTE=
+textVTE=...
 textVST=
 textSLN=
-textIGE=
-textLMA=
+textIGE=...
+textLMA=...
 textVCA=Vacations
 textAVP=Voluntary Contribuition
 textVCT=Variation Workplace
 textIRP=Disability by accident or occupational disease
-textSUS=
+textSUS=...
 textINTE=Integral
 tarifaEPS=PHI Tariff 
 tarifaAAFP=PFI Tariff
@@ -152,7 +152,7 @@ subTipoCotizante3=
 subTipoCotizante4=
 subTipoCotizante5=
 subTipoCotizante6=
-subTipoCotizante0=
+subTipoCotizante0=0. Unknown value
 tarifaCaja=Cash Tariff
 tarifaSena=SENA Tariff
 tarifaICBF=ICBF Tariff
@@ -331,6 +331,6 @@ aporteEntidadM=Entities Contributions
 buscarBA=Search Contribution: 
 errorProcesoLiquidacionFechas=
 procesoLiquidacionOK=\u00bf Do you want continue with the Liquidation Process ?
-confirmarBorrarTodoAuto=
+confirmarBorrarTodoAuto=\u00bf Are you sure to delete ?
 errorAcumularDiferencia=
 acumularDiferenciaOK=\u00bf Do you want continue with the process ?
