--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/adminreportes_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/adminreportes_en.properties
@@ -137,3 +137,4 @@ errorTablaConRastro=The table does not exist in RASTROSTABLAS but it has associa
 errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associated entries.
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'INFOREPORTES' hasn't been found ObjetosDB. Please get in touch with support
+repetido=There can't be two equal report codes for one module. Please enter another code or change the module.
