--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq_en.properties
@@ -140,7 +140,7 @@ egAutorizacion=Authorization EG
 maternidadValor=Value Maternity
 maternidadAuto=Authorization Maternity
 upcValor=Value UPC
-tipo=Type
+tipo=Employee Type
 textTP=Pensioner Type
 textPC=Shared Pension
 textEXTR=Foreign
@@ -334,3 +334,5 @@ procesoLiquidacionOK=\u00bf Do you want continue with the Liquidation Process ?
 confirmarBorrarTodoAuto=\u00bf Are you sure to delete ?
 errorAcumularDiferencia=
 acumularDiferenciaOK=\u00bf Do you want continue with the process ?
+headerIbc=IBC Value
+editarTipoEntidadD=Entity Type
