--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/jornadaslaborales_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/jornadaslaborales_en.properties
@@ -33,6 +33,11 @@ horafinalalimentacion=Feeding Final Time
 minutofinalalimentacion=Feeding Final Minute
 horafinal=Final Time
 minutofinal=Final Minute
+#Tooltip Semana Laboral
+horainicialtt=Initial Time Working Day
+minutoinicialtt=Initial Minute Working Day
+horafinaltt=Final Time Working Day
+minutofinaltt=Final Minute Working Day
 #LOV Jornada
 jornadaj=Listing Working Day
 buscarj=Search Working Day:
@@ -105,6 +110,8 @@ atencion=WARNING...!
 aceptar=Accept
 atras=Back
 validacionNuevo= To insert a new working day it's necessary to add:
+validacionCodigoJL=The code you entered is already registered. Please enter a different code
+validacionHorasJL=The following fields must have a value greater than 0: 
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
@@ -163,10 +170,5 @@ horafinalX=Final Time
 horafinalXX=Final_Time
 minutofinalX=Final Minute
 minutofinalXX=Final_Minute
-validacionCodigoJL=The code you entered is already registered. Please enter a different code
-validacionHorasJL=The following fields must have a value greater than 0: 
 descripcionXX=Description
-horainicialtt=Initial Time Working Day
-minutoinicialtt=Initial Minute Working Day
-horafinaltt=Final Time Working Day
-minutofinaltt=Final Minute Working Day
+
