--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/adminreportes_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/adminreportes_en.properties
@@ -138,3 +138,4 @@ errorTablaSinRastro=The table does not exist in RASTROSTABLAS and has no associa
 seleccionarRegistro=Please choose an entry.
 errorObjetosDB=The table 'INFOREPORTES' hasn't been found ObjetosDB. Please get in touch with support
 repetido=There can't be two equal report codes for one module. Please enter another code or change the module.
+salir=Exit
