--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos_en.properties
@@ -132,18 +132,18 @@ reportadaE=Reported
 terceroE=Supplier
 observacionesE=Observations
 reportada=Reported to Entity
-tipoN=Type: 
-claseN=Class: 
-causaN=Cause: 
+tipoN=*Type: 
+claseN=*Class: 
+causaN=*Cause: 
 diasN=Days: 
 horasN=Hours: 
-iausenciaN=Starting Date: 
+iausenciaN=*Starting Date: 
 fausenciaN=End Date: 
 expedicionN=Expedited: 
 ipagoN=Start Payment: 
 fpagoN=End Payment: 
 bliquidacionN=Settlement Base: 
-fliquidacionN=Settlement Method: 
+fliquidacionN=*Settlement Method: 
 porcentajes=Percentages
 buscarPR=Search Extention: 
 causasausentismosCA=Absenteeism Causes
@@ -166,3 +166,4 @@ buscarD=Search Diagnosis:
 tercerosT=Suppliers
 buscarT=Search Supplier: 
 salir=Exit
+buscarP=Search Percentages: 
