--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadconcepto_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadconcepto_en.properties
@@ -51,16 +51,16 @@ solucionesformulas=The entry is in SOLUCIONES FORMULAS,hence, it can't be erased
 #Nuevo Registro
 nuevoregistro=New Entry
 ingresarnuevo=Add new Novelty
-codigoN=Code: 
+codigoN=*Code: 
 nombreN=Employee Name: 
-fechainicialN=Initial Date: 
+fechainicialN=*Initial Date: 
 fechafinalN=End Date: 
-valorN=Value: 
+valorN=*Value: 
 saldoN=Balance: 
 descripcionN=Regularity Description: 
 nitN=N.I.T: 
 nombreterceroN=Supplier Name: 
-formulaN=Formula: 
+formulaN=*Formula: 
 horasdiasN=Hours/Dias: 
 minutoshorasN=Minutes/Horas: 
 tipoN=Type: 
@@ -70,7 +70,7 @@ porfuera=LATE PAYMENT
 #Inconsistencia
 inconsistencia=The Initial Date of a Novelty can't be less than the emlpoyees hiring date.
 #Fechas
-fechas=The Initial Date of a Novelty can't be Higher than it's own end date.
+fechas=There is an inconsistency between the inicial and end date. Please, verify the dates.
 #EDITAR
 editarEmpleadosCodigos=Employee Code
 editarEmpleadosNombres=Employee Name
@@ -148,3 +148,4 @@ validacionNuevo=To insert a new novelty it's necessary to add:
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar=Refresh
+salir=Exit
