--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq_en.properties
@@ -336,3 +336,4 @@ errorAcumularDiferencia=
 acumularDiferenciaOK=\u00bf Do you want continue with the process ?
 headerIbc=IBC Value
 editarTipoEntidadD=Entity Type
+operacionEnProceso=Operation in process. Please, wait...
