--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos_en.properties
@@ -38,7 +38,7 @@ refrescar= Refresh
 #TABLA DE ABAJO
 ausentismo=Absenteeism
 fechas=Dates
-BML=Liquidation Base
+BML=Settlement Base
 ISO=Ocuppational health incapacities
 #Tabla de mas Abajo
 tipo=Type
@@ -51,8 +51,8 @@ fausencia=Ending Date
 expedicion=Expedition
 ipago=Payment's Start
 fpago=Payment's Ending
-bliquidacion=Liquidation Base
-fliquidacion=Liquidation Method
+bliquidacion=Settlement Base
+fliquidacion=Settlement Method
 at=AD
 ep=SD
 numero=# Certificate
@@ -67,8 +67,8 @@ tfa=Absenteeism's ending date
 tip=Payment's starting date
 tfp=Payment's ending date
 tp=Individual Percentage
-tbl=Liquidation Base
-tfl=Liquidation Method
+tbl=Settlement Base
+tfl=Settlement Method
 tat=Accident's description
 tep=Sickness description
 tcd=Diagnosis Code
@@ -120,8 +120,8 @@ fausenciaE=Ending_Date
 expedicionE=Expedition
 ipagoE=Payment_Start
 fpagoE=Payment_Ending
-bliquidacionE=Liquidation_Base
-fliquidacionE=Liquidation_Method
+bliquidacionE=Settlement_Base
+fliquidacionE=Settlement_Method
 atE=AD
 epE=SD
 numeroE=Certificate
