--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/unidad_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/unidad_en.properties
@@ -47,6 +47,7 @@ atencion=WARNING...!
 aceptar=Accept
 atras=Back
 validacionNuevo= To insert a new working day it's necessary to add:
+existe=The code you entered is already registered. Please enter a different code
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
