--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/causaausentismo_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/causaausentismo_en.properties
@@ -64,6 +64,7 @@ aceptar=Accept
 atras=Back
 validacionNuevo= To insert a new working day it's necessary to add:
 validacionCodigo=The code you entered is already registered. Please enter a different code
+validacionCodigodos=The modified field can't be empty
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
