--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/jornadaslaborales_en.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/jornadaslaborales_en.properties
@@ -111,7 +111,11 @@ aceptar=Accept
 atras=Back
 validacionNuevo= To insert a new working day it's necessary to add:
 validacionCodigoJL=The code you entered is already registered. Please enter a different code
+validacionDiaSL=The day you entered is already registered. Please enter a different day
 validacionHorasJL=The following fields must have a value greater than 0: 
+validaciondescripcion=The modified field can't be empty
+validacionHorasSL=In the following fields, the entered value is not in between the allowed range (0 - 23), please enter a different value: 
+validacionMinutosSL=In the following fields, the entered value is not in between the allowed range (0 - 59), please enter a different value: 
 cambiosRealizados=Do you want to save changes?
 cambio=There are some unsaved changes, do you want to save them?
 refrescar= Refresh
